# guido

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  guido.py  pyproject.toml  test API.ipynb  test.ipynb
docs/: requirements.txt
docs/source/: conf.py  getting_started.rst  guido.rst  index.rst  installation.rst  modules.rst
guido/: __init__.py  genome.py  guides.py  guido.py  helpers.py  locus.py  mmej.py  off_targets.py
guido/data/: V3_model_full.pickle  V3_model_nopos.pickle
guido/templates/: guide_details.j2
notebooks/: examples.ipynb
tests/: test_guido.py
