[tool.poetry]
name = "guido"
version = "0.1.0"
description = ""
authors = ["nkran <nace.kranjc@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
numpy = "^1.21.1"
zarr = "^2.8.3"
pyfaidx = "^0.6.1"
pyranges = "^0.0.101"
Jinja2 = "^3.0.1"
h5py = "^3.3.0"
scikit-allel = "^1.3.5"
ncls = "^0.0.60"
pandas = "^1.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
