[tool.poetry]
name = "guido"
version = "0.1.3a0"
description = ""
authors = ["Nace Kranjc <nace.kranjc@gmail.com>"]

[tool.poetry.dependencies]
python = ">3.9,<=3.10"
numpy = "^1.21.1"
zarr = "^2.8.3"
pyfaidx = "^0.6.1"
pyranges = "^0.0.101"
Jinja2 = "^3.0.1"
h5py = "^3.3.0"
scikit-allel = "^1.3.5"
ncls = "^0.0.60"
pandas = "^1.3.1"
mcdm = {git = "https://github.com/akestoridis/mcdm.git"}
biomatters-azimuth = {git = "https://github.com/Biomatters/Azimuth.git"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "22.3.0"
ipykernel = "^6.21.1"
zarr = {extras = ["jupyter"], version = "^2.10.3"}
graphviz = "^0.19.1"
pre-commit = "^2.17.0"
click = "8.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
